Added Large image on top in news

--- a/WebApp/Views/News/NewsDetails.cshtml
+++ b/WebApp/Views/News/NewsDetails.cshtml
@@ -13,14 +13,22 @@
                 <h3>@Model.newsTitle</h3>
             </div>
         </div>
+        @if (Model.hasImage)
+        {
+            <div class="row">
+                <div class="col-sm-12">
+                    <img class="img-responsive" src="data:image/png;base64,@Model.newsImageBase64" />
+                </div>
+            </div>
+        }
         <div class="row p-t-20 p-lr-30 gray-bdr-1 w-bg">
             <ul class="messages">
                 <li style="border-bottom: none;">
 
-                    @if (Model.hasImage)
-                    {
-                        <img src="data:image/png;base64,@Model.newsImageBase64" class="avatar" alt="Avatar">
-                    }
+                    @*@if (Model.hasThumbnail)
+                    {*@
+                        <img src="data:image/png;base64,@Model.newsThumbnailBase64" class="avatar" alt="Avatar">
+                    @*}*@
 
                     <div class="">
                         @Html.Raw(Model.newsDetail)
