--- a/WebApp/Views/SeeDoctor/SeeDoctor.cshtml
+++ b/WebApp/Views/SeeDoctor/SeeDoctor.cshtml
@@ -337,7 +337,7 @@
                                         <h4 class="modal-title" id="timingsmodaltitle"></h4>
                                     </div><!--/.modal header-->
 
-                                    <div class="modal-body text-left" >
+                                    <div class="modal-body text-left">
                                         <div class="row" id="docrow">
                                             <input type="text" style="display:none" id="doctorid">
 
@@ -362,7 +362,7 @@
 
 
                                             <form class="form-horizontal form-label-left">
-                                                <div class="col-sm-12 text-center">
+                                                <div class="col-sm-12 text-center" style="height:230px;overflow:auto">
                                                     <ul class="doctor_time" id="TimingsData"></ul>
                                                 </div>
                                                 @*<button type="button" class="btn btn-primary btn-sm pull-right" id="apply">Apply</button>*@
