--- a/WebApp/Views/Appointment/Index.cshtml
+++ b/WebApp/Views/Appointment/Index.cshtml
@@ -105,7 +105,7 @@
                     <h4 class="modal-title" id="timingsmodaltitle"></h4>
                 </div><!--/.modal header-->
 
-                <div class="modal-body text-left" style="height:230px">
+                <div class="modal-body text-left" >
                     <div class="row" id="docrow">
                         <input type="text" style="display:none" id="doctorid">
 
@@ -122,7 +122,7 @@
                         </form>
                       
                         <form class="form-horizontal form-label-left">
-                            <div class="col-sm-12 text-center">
+                            <div class="col-sm-12 text-center" style="height:230px;overflow:auto">
                                 <ul class="doctor_time" id="TimingsData"></ul>
                             </div>
                             <input type="text" style="display:none" id="RAppID">
@@ -146,12 +146,11 @@
     var _doctorName="";
     var _doctorID="";
     var appdate="";
-    function sendVariables(doctorid, editappid,elem) {
+    function sendVariables(appDate,doctorid, editappid,elem) {
 
         _doctorID=doctorid;
         _doctorName= $(elem).data('assigned-id');
-
-        showDoctorTimings(doctorid,editappid);
+        showDoctorTimings(doctorid,editappid,appDate);
     }
 
     $(function () {
@@ -180,34 +179,7 @@
                 //stopLoader();
 
             });
-            //$.ajax({
-            //    type: "GET",
-            //    url: AppDetailPostBackURL,
-            //    contentType: "application/json; charset=utf-8",
-            //    data: { "appID": appID },
-            //    datatype: "json",
-            //    success: function (data) {
-            //        if(data!=undefined|| data!=null)
-            //        {
-            //            $('#myModalContent').html(data);
-            //            $('#myModal4').modal('show');
-            //            var $modal = $('#myModal4');
-            //            $editappid = $modal.find('#editappid');
-            //            $doctorid = $modal.find('#doctorid');
-            //            $editappid.val(appID);
-            //            $doctorid.val(docid);
-            //        }
-            //        else
-            //        {
-            //            new PNotify({ title: 'Error', text: "Dynamic content load failed.", type: 'error', styling: 'bootstrap3' });
-
-            //        }
-
-            //    },
-            //    error: function (err) {
-            //        new PNotify({ title: 'Error', text: err.statusText, type: 'error', styling: 'bootstrap3' });
-            //    }
-            //});
+            
         });
 
 
