--- a/WebApp/Views/Appointment/PartialViewDetail.cshtml
+++ b/WebApp/Views/Appointment/PartialViewDetail.cshtml
@@ -1,73 +1,92 @@
-﻿@model IEnumerable<DataAccess.SP_GetAppDetail_Result>
+﻿@using System.Globalization
+@model DataAccess.CustomModels.GetAppDetail
 @{
     Layout = null;
 }
 @if (Model != null)
 {
     var doctorName = "";
-    var age = "";
-    var gender = "";
+    var age = "N.A";
+    var gender = "N.A";
     var languages = "";
     var specialities = "";
 
     var appDate = "";
     var appTime = "";
-    var rov = "";
-    var chiefComplaints = "";
-    var amount = "";
-    var pharmacy = "";
-    var cellPhone = "";
+    var rov = "N.A";
+    var chiefComplaints = "N.A";
+    var amount = "N.A";
+    var pharmacy = "N.A";
+    var cellPhone = "N.A";
     var formattedDate = "";
-    foreach (var item in Model)
+    var formattedTime= "";
+    var showTimings = "";
+
+    appDate = Model.appDate.ToString();
+    appTime = Model.appTime.ToString();
+    doctorName = Model.DoctorVM.doctorName;
+    if (Model.DoctorVM.GetAge()!=null) { age = Model.DoctorVM.GetAge(); }
+    if (Model.DoctorVM.doctorGender != null)
     {
-        doctorName = item.DoctorName;
-        age = item.DoctorAge.ToString();
-        gender = item.DoctorGender;
-        cellPhone = item.pcellPhone;
-        appDate = item.appDate;
-        appTime = item.appTime;
-        rov = item.rov;
-        chiefComplaints = item.chiefComplaints;
-        amount = item.paymentAmt.ToString();
-        pharmacy = item.pharmacy;
-
-        if (item.languageName != "N.A")
-        {
-            if(languages=="")
-            {
-                languages= item.languageName + ",";
-            }
-            else
-            {
-                languages = languages + item.languageName + ",";
-            }
-
-        }
-
-        if (item.specialityName != "N.A")
-        {
-            if (specialities == "")
-            {
-                specialities = item.specialityName + ",";
-            }
-            else
-            {
-                specialities = specialities + item.specialityName + ",";
-            }
-
-        }
-
+        gender = Model.DoctorVM.doctorGender;
     }
-    if(appDate!="")
+    if (Model.DoctorVM.dcellPhone != null)
     {
-        DateTime date = DateTime.ParseExact(appDate.ToString(), "dd/MM/yyyy", null);
+        cellPhone = Model.DoctorVM.dcellPhone;
+    }
+
+    if (Model.rov != null) { rov = Model.rov; }
+    if (Model.chiefComplaints != null)
+    {
+        chiefComplaints = Model.chiefComplaints;
+    }
+    if (Model.paymentAmt != null)
+    {
+    amount = Model.paymentAmt.ToString();
+     }
+    pharmacy = Model.PatientVM.pharmacy;
+
+    if(Model.DoctorVM.languages!=null)
+    {
+        foreach (var item in Model.DoctorVM.languages)
+        {
+            languages = languages+item.languageName + ",";
+
+        }
+    }
+
+    if (languages == "") { languages = "N.A"; }
+
+    if (Model.DoctorVM.specialities != null)
+    {
+        foreach (var item in Model.DoctorVM.specialities)
+        {
+            specialities = specialities + item.specialityName + ",";
+
+        }
+    }
+
+    if (specialities == "") { specialities = "N.A"; }
+
+
+
+    if (appDate!="")
+    {
+        DateTime date = DateTime.Parse(appDate);
+        //DateTime temp=DateTime.ParseExact(date.Date.ToString(), "MM/dd/yyyy", null);
         formattedDate = string.Format("{0:dd MMM, yyyy}", date);
+        showTimings= string.Format(" {0:dd/MM/yyyy}", date);
+
+    }
+    if (appTime != "")
+    {
+        TimeSpan apptimings = TimeSpan.Parse(appTime);
+        var dateTime = new DateTime(apptimings.Ticks); // Date part is 01-01-0001
+        formattedTime = dateTime.ToString("hh:mm tt", CultureInfo.InvariantCulture);
     }
 
 
-
-
-        <div class="modal-header text-center" style="background: #E4F1FE; border-bottom-color: #c3bebe;">
+    <div class="modal-header text-center" style="background: #E4F1FE; border-bottom-color: #c3bebe;">
             <h2 style="margin: 0; color: #337ab7"><b>Appoinment Details</b></h2>
         </div><!--/.modal header-->
 
@@ -75,12 +94,12 @@
     <div class="modal-body text-left">
         <div class="user-detail">
             <div class="img-1">
-                <img src="../Content/images/img.jpg" alt="" class="m-b-10 img-responsive">
+                <img src="@(string.IsNullOrEmpty(Model.DoctorVM.ProfilePhotoBase64) ? WebApp.Helper.SessionHandler.ProfilePhoto : Model.DoctorVM.ProfilePhotoBase64)" alt="" class="m-b-10 img-responsive">
             </div>
             <div class="name-sec">
-                <h2>@doctorName</h2>
+                <h2>Dr.@doctorName</h2>
                 <p style="font-size:10px">
-                    @age Years <br>@*<span>Gender: @gender</span>*@
+                    @age<br>@*<span>Gender: @gender</span>*@
                     Gender: @gender<br>
                     Languages: @languages<br>
                     Specialities: @specialities<br>
@@ -90,7 +109,7 @@
         </div>
 
          <div style="border-bottom: 1px Solid #c3bebe; border-top: 1px Solid #c3bebe; margin: 36px -15px 20px; padding: 10px 21px 0; ">
-            <p style="color: #375781;"><span style="width: 150px; float: left;">Appointment Date/Time</span><b>@formattedDate - @appTime</b></p>
+            <p style="color: #375781;"><span style="width: 150px; float: left;">Appointment Date/Time</span><b>@formattedDate-@formattedTime</b></p>
         </div>
         @*<div style="border-bottom: 1px Solid #c3bebe; border-top: 1px Solid #c3bebe; margin: 0 -15px 20px; padding: 10px 21px 0; float: left;">
         <p style="color: #375781;"><span style="width: 150px; float: left;">Reason of Visit</span><b>@rov</b></p>
@@ -98,25 +117,24 @@
        
         <p style="color: #375781;font-family:Helvetica Neue,Roboto,Arial,Droid Sans,sans-serif; font-size: 14px;font-weight: 400;line-height: 1.471;"><b>Reason of Visit:</b><br> @rov</p>
         <p id="p_chiefComplaints" style="color: #375781;font-family:Helvetica Neue,Roboto,Arial,Droid Sans,sans-serif; font-size: 14px;font-weight: 400;line-height: 1.471;"><b>Chief Complaint:</b><br> @chiefComplaints</p>
-        <p id="p_amount" style="color: #375781;font-family:Helvetica Neue,Roboto,Arial,Droid Sans,sans-serif; font-size: 14px;font-weight: 400;line-height: 1.471;"><b>Payment Amount</b><br> @amount</p>
+        <p id="p_amount" style="color: #375781;font-family:Helvetica Neue,Roboto,Arial,Droid Sans,sans-serif; font-size: 14px;font-weight: 400;line-height: 1.471;"><b>Consult Charges:</b><br> @amount</p>
         
        
-        <div style="border-bottom: 1px Solid #c3bebe; border-top: 1px Solid #c3bebe; margin: 0 -15px -11px; padding: 10px 21px 0; ">
+        @*<div style="border-bottom: 1px Solid #c3bebe; border-top: 1px Solid #c3bebe; margin: 0 -15px -11px; padding: 10px 21px 0; ">
             <p style="color: #375781;"><span style="width: 150px; float: left;">Pharmacy</span><b>@pharmacy</b></p>
-        </div><br />    
+        </div><br />*@    
          @*<label style="color: #375781;font-family:Helvetica Neue,Roboto,Arial,Droid Sans,sans-serif; font-size: 14px;font-weight: 400;line-height: 1.471;">Cell Phone</label>
             <input type="text" value="@cellPhone" style="max-width: 100%;" class="form-control" />*@
         <div class="m-t-10" style="margin-top:-26px">
-            <button onclick=sendVariables($("#doctorid").val(),$("#editappid").val(),this) data-assigned-id="@doctorName" data-todo='{"docid":"$("#doctorid").val()","doctorName":"@doctorName"}' data-toggle="modal" data-target="#myModal1" id="editappointment" style="width: 100%; border-radius: 0; color: #fff; padding: 15px 5px; font-size: 20px;" type="button" class="btn btn-primary">Reschedule App</button>
+            <button onclick=sendVariables($("#st").val(),$("#doctorid").val(),$("#editappid").val(),this); data-assigned-id="@doctorName" data-todo='{"docid":"$("#doctorid").val()","doctorName":"@doctorName"}' data-toggle="modal" data-target="#myModal1" id="editappointment" style="width: 100%; border-radius: 0; color: #fff; padding: 15px 5px; font-size: 20px;" type="button" class="btn btn-primary">Reschedule App</button>
             @*<li><a href="#" class="reschedule" data-id="@item.appDate" data-toggle="modal" data-target="#myModal1" data-todo='{"docid":"@item.doctorID","doctorName":"@item.DoctorName","appID":"@item.appID","appDate":"@item.appDate"}' onclick=showDoctorTimings(@item.doctorID,@item.appID) id="@item.doctorID">Reschedule App</a></li>*@
             <input type="text" style="display:none" id="editappid">
             <input type="text" style="display:none" id="doctorid">
+            <input type="text" style="display:none" id="st" value="@showTimings">
            
         </div>
 
     </div><!--/.modal body-->
 }
-<script>
-    
-    </script>
+
 
