--- a/WebApp/Views/Consultation/Index.cshtml
+++ b/WebApp/Views/Consultation/Index.cshtml
@@ -1,9 +1,38 @@
 ﻿
+    @using WebApp.Helper
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_DoctorLayout.cshtml";
+    Layout = "~/Views/Shared/_PatientLayout.cshtml";
 }
 
+<style>
+    .user-detail {
+        max-width: 250px;
+        margin: 0 auto;
+        color: #375781;
+        height: 100px;
+    }
+
+    .img-viewdetail {
+        float: left;
+        border-radius: 50%;
+        max-width: 100px;
+    }
+
+    .img-1 {
+        float: left;
+    }
+
+        .img-1 img {
+            border-radius: 50%;
+            max-width: 100px;
+        }
+
+    .name-sec {
+        float: left;
+        margin-left: 20px;
+    }
+</style>
 <!-- page content -->
 <div class="right_col" role="main">
     <div class="clearfix"></div>
@@ -20,56 +49,26 @@
         </div>
 
         <div class="x_content">
-            <div class="table-responsive">
-                <table id="datatable-responsive" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
-                    <thead>
-                        <tr class="headings">
-                            <th class="column-title">Doctor's Name </th>
-                            <th class="column-title">Date & Time </th>
-                            <th class="column-title">Rating</th>
-                            <th class="column-title">ROV </th>
-                            <th class="column-title">Action</th>
-                        </tr>
-                    </thead>
-
-                    <tbody>
-                        @if (Model != null)
-                        {
-                            foreach (var item in Model)
-                            {
-                                <tr class="even pointer">
-                                    <td>@item.</td>
-                                    <td>03 Jun 2016  01:15 PM</td>
-                                    <td>Pending</td>
-                                    <td>ROV</td>
-
-                                    <td>
-                                        <button class="btn btn-primary btn-sm m-b-0 " type="button" data-toggle="modal" data-target="#myModal4">
-                                            View
-                                        </button>
-                                    </td>
-                                </tr>
-                            }
-                        }
-                        
-
-                      
-                    </tbody>
-                </table>
+            <div class="table-responsive" id="divConsultation">
+                @{
+                    Html.RenderAction("PartialViewConsultation", "Consultation");
+                }
+                </div>
             </div>
-        </div>
     </div>
-
+    <input type="text" style="display:none" id="pvappid" value="0">
     <div class="modal fade" id="myModal4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel4">
         <div class="modal-dialog" role="document" style="width: 350px;">
             <div id='myModalContent' class="modal-content" style="border-radius: 0;">
-
+                @{
+                    Html.RenderAction("ViewDetail", "Consultation", new { consultID = 0 });
+                }
             </div>
         </div>
     </div><!-- View App Detail -->
     <div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel1">
         <div class="modal-dialog" role="document">
-            <div class="modal-content">
+            <div class="modal-content" style="width: 500px;margin-left: 280px;">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                     <h4 class="modal-title" id="timingsmodaltitle">Consultation Review</h4>
@@ -77,30 +76,31 @@
 
                 <div class="modal-body text-left">
                     <div class="row" id="docrow">
-                        <input type="text" style="display:none" id="doctorid">
+                        <input type="text" style="display:none" id="consultID">
 
-                        <form class="form-horizontal form-label-left">
+                        <form class="form-horizontal form-label-left" style="margin-top: -20px;">
                             <div class="col-sm-offset-4 col-sm-4">
                                 <div class="xdisplay_inputx form-group has-feedback">
-                                    
+
                                     <span id="inputSuccess2Status" class="sr-only">(success)</span>
                                 </div>
                             </div>
                         </form>
-                           <form class="form-horizontal form-label-left">
-                            <div class="col-sm-12 text-center">
-                                @*<ul class="doctor_time" id="TimingsData"></ul>*@
-                                <a href="#"><span class="fa fa-star"></span></a>
-                                <a href="#"><span class="fa fa-star"></span></a>
-                                <a href="#"><span class="fa fa-star"></span></a>
-                                <a href="#"><span class="fa fa-star"></span></a>
-                                <a href="#"><span class="fa fa-star"></span></a>
+                        <form class="form-horizontal form-label-left">
+                            <div class="col-sm-12 text-center" id="rdiv"> @*style="margin-left:97px"*@
+                               
+                                <a href="javascript:void(0);" onclick="toggle(this);"><span id="s1" class="fa fa-star-o"></span></a>
+                                <a href="javascript:void(0);"><span id="s2" class="fa fa-star-o"></span></a>
+                                <a href="javascript:void(0);"><span id="s3" class="fa fa-star-o"></span></a>
+                                <a href="javascript:void(0);"><span id="s4" class="fa fa-star-o"></span></a>
+                                <a href="javascript:void(0);"><span id="ss5" class="fa fa-star-o"></span></a>
+                                
                             </div>
-                               <div class="col-sm-12 text-center">
-                                   <textarea id="message" class="form-control" name="message" data-parsley-maxlength="1000" 
-                                             data-parsley-validation-threshold="10"></textarea>
-                               </div>
-                            @*<button type="button" class="btn btn-primary btn-sm pull-right" id="apply">Apply</button>*@
+                            <div class="col-sm-12 text-center" style="margin-top: 20px;">
+                                <textarea id="message" class="form-control" name="message" data-parsley-maxlength="1000"
+                                          data-parsley-validation-threshold="10" ></textarea>
+                            </div>
+                           <button style="margin-right: 210px;margin-top: 6px;" type="button" class="btn btn-primary btn-sm pull-right" id="apply" onclick=WriteReview($("#message").val())>Submit</button>
                         </form>
 
                     </div><!--/.modal body-->
@@ -109,44 +109,216 @@
         </div>
     </div><!-- col1 -->
 </div>
-        
+
 <!-- /page content -->
 <script>
-    $(function () {
-        $(".thumbnail-col-inner").click(function () {
-
+    var star=0;
+    var cID = 0;
+    function showConsult(consultID)
+    {
+        cID = consultID;
             //debugger;
-            //var $buttonClicked = $(this);
-            var AppDetailPostBackURL = '/Consultation/ViewDetail';
-            
-            $.ajax({
-                type: "GET",
-                url: AppDetailPostBackURL,
-                contentType: "application/json; charset=utf-8",
-                data: { "appID": appID },
-                datatype: "json",
-                success: function (data) {
-                    if (data != undefined || data != null) {
-                        $('#myModalContent').html(data);
-                        $('#myModal4').modal('show');
-                        var $modal = $('#myModal4');
-                        $editappid = $modal.find('#editappid');
-                        $doctorid = $modal.find('#doctorid');
-                        $editappid.val(appID);
-                        $doctorid.val(docid);
-                    }
-                    else {
-                        new PNotify({ title: 'Error', text: "Dynamic content load failed.", type: 'error', styling: 'bootstrap3' });
+             reloadModelContainer(function () {
+                var $modal = $('#myModal4');
+                
 
-                    }
-
-                },
-                error: function (err) {
-                    new PNotify({ title: 'Error', text: err.statusText, type: 'error', styling: 'bootstrap3' });
-                }
             });
+
+        }
+    function reloadModelContainer(callback) {
+        $("#myModalContent").load('@Url.Action("ViewDetail", "Consultation")?consultID=' + cID, function () {
+            callback();
         });
 
+    }
 
+    function reloadConsultation(callback) {
+
+        $("#divConsultation").load('@Url.Action("PartialViewConsultation", "Consultation")', function () {
+            callback();
+        });
+     }
+    //set stars
+    jQuery('span').click(function(){
+        if ( jQuery(this).hasClass('fa fa-star-o'))
+        {
+
+           
+            if( jQuery(this).attr("id")=="s1")
+            {
+                
+                $("span#s1").removeClass('fa fa-star-o');
+                $("span#s1").addClass('fa fa-star');
+                star=1;
+            }
+            if( jQuery(this).attr("id")=="s2")
+            {
+               
+                $("span#s1").removeClass('fa fa-star-o');
+                $("span#s1").addClass('fa fa-star');
+                $("span#s2").removeClass('fa fa-star-o');
+                $("span#s2").addClass('fa fa-star');
+                star=2;
+            }
+            if( jQuery(this).attr("id")=="s3")
+            {
+               
+                $("span#s1").removeClass('fa fa-star-o');
+                $("span#s1").addClass('fa fa-star');
+                $("span#s2").removeClass('fa fa-star-o');
+                $("span#s2").addClass('fa fa-star');
+                $("span#s3").removeClass('fa fa-star-o');
+                $("span#s3").addClass('fa fa-star');
+                star=3;
+            }
+            if( jQuery(this).attr("id")=="s4")
+            {
+                
+                $("span#s1").removeClass('fa fa-star-o');
+                $("span#s1").addClass('fa fa-star');
+                $("span#s2").removeClass('fa fa-star-o');
+                $("span#s2").addClass('fa fa-star');
+                $("span#s3").removeClass('fa fa-star-o');
+                $("span#s3").addClass('fa fa-star');
+                $("span#s4").removeClass('fa fa-star-o');
+                $("span#s4").addClass('fa fa-star');
+                star=4;
+            }
+            if( jQuery(this).attr("id")=="ss5")
+            {
+                
+                $("span#s1").removeClass('fa fa-star-o');
+                $("span#s1").addClass('fa fa-star');
+                $("span#s2").removeClass('fa fa-star-o');
+                $("span#s2").addClass('fa fa-star');
+                $("span#s3").removeClass('fa fa-star-o');
+                $("span#s3").addClass('fa fa-star');
+                $("span#s4").removeClass('fa fa-star-o');
+                $("span#s4").addClass('fa fa-star');
+                $("span#ss5").removeClass('fa fa-star-o');
+                $("span#ss5").addClass('fa fa-star');
+                star=5;
+            }
+          
+        }
+        else
+        {
+                  
+            if( jQuery(this).attr("id")=="s1")
+            {
+                
+                $("#ss5").removeClass('fa fa-star');
+                $("#ss5").addClass('fa fa-star-o');
+                $("#s4").removeClass('fa fa-star');
+                $("#s4").addClass('fa fa-star-o');
+                $("#s3").removeClass('fa fa-star');
+                $("#s3").addClass('fa fa-star-o');
+                $("#s2").removeClass('fa fa-star');
+                $("#s2").addClass('fa fa-star-o');
+                $("#s1").removeClass('fa fa-star');
+                $("#s1").addClass('fa fa-star-o');
+                star=0;
+            }
+            if( jQuery(this).attr("id")=="s2")
+            {
+                
+                $("#ss5").removeClass('fa fa-star');
+                $("#ss5").addClass('fa fa-star-o');
+                $("#s4").removeClass('fa fa-star');
+                $("#s4").addClass('fa fa-star-o');
+                $("#s3").removeClass('fa fa-star');
+                $("#s3").addClass('fa fa-star-o');
+                $("#s2").removeClass('fa fa-star');
+                $("#s2").addClass('fa fa-star-o');
+                star=1;
+            }
+            if( jQuery(this).attr("id")=="s3")
+            {
+               
+                $("#ss5").removeClass('fa fa-star');
+                $("#ss5").addClass('fa fa-star-o');
+                $("#s4").removeClass('fa fa-star');
+                $("#s4").addClass('fa fa-star-o');
+                $("#s3").removeClass('fa fa-star');
+                $("#s3").addClass('fa fa-star-o');
+               
+                star=2;
+            }
+            if( jQuery(this).attr("id")=="s4")
+            {
+                alert('4');
+                $("#ss5").removeClass('fa fa-star');
+                $("#ss5").addClass('fa fa-star-o');
+                $("#s4").removeClass('fa fa-star');
+                $("#s4").addClass('fa fa-star-o');
+                star=3;
+            }
+            if( jQuery(this).attr("id")=="ss5")
+            {
+               
+                $("#ss5").removeClass('fa fa-star');
+                $("#ss5").addClass('fa fa-star-o');
+                star=4;
+            }
+        }
+
+       
     });
-    </script>
+        
+    //Write Review
+    function WriteReview(message)
+    {
+        
+        var _objReview = {};
+        _objReview["consultID"] =  $("#pvappid").val();
+        _objReview["patientID"] = @SessionHandler.UserInfo.Id;
+        _objReview["star"] =star;
+        _objReview["reviewText"] =message;
+        $.ajax({
+            url: '@Url.Action("WriteReview", "Consultation")',
+            type: "POST",
+            data: _objReview,
+            dataType: 'json',
+            success: function (result) {
+                //Reload container
+                if (result.Message != undefined) {
+                    new PNotify({ title: 'Error', text: result.Message.ReasonPhrase, type: 'error', styling: 'bootstrap3' });
+                    $('#myModal1').modal('hide');
+                    $('#myModal4').modal('hide');
+                    //stopLoader();
+                }
+                else {
+
+                    if(result.ApiResultModel.message=="")
+                    {
+                        new PNotify({ title: 'Success', text: "Consultation is reviewed successfully.", type: 'success', styling: 'bootstrap3' });
+                        $('#myModal1').modal('hide');
+                        $('#myModal4').modal('hide');
+                        reloadConsultation(function ()
+                        {
+                            //Stop displaying loader
+                            //stopLoader();
+
+                        });
+                    }
+                    else
+                    {
+                        new PNotify({ title: 'Error', text: result.ApiResultModel.message, type: 'error', styling: 'bootstrap3' });
+                        $('#myModal1').modal('hide');
+                        $('#myModal4').modal('hide');
+
+                    }
+
+
+                }
+
+            },
+            error: function (err) {
+                //alert(err.statusText);
+                new PNotify({ title: 'Error', text: err.statusText, type: 'error', styling: 'bootstrap3' });
+                //Stop displaying loader
+                //stopLoader();
+            }
+        });
+    }
+</script>
