--- a/WebApp/Views/Appointment/PartialViewDetail.cshtml
+++ b/WebApp/Views/Appointment/PartialViewDetail.cshtml
@@ -3,7 +3,7 @@
 @{
     Layout = null;
 }
-@if (Model != null)
+@if (Model != null && Model.appID!=0)
 {
     var doctorName = "";
     var age = "N.A";
