--- a/WebApp/Views/DoctorAppointment/PartialDoctorViewAppDetail.cshtml
+++ b/WebApp/Views/DoctorAppointment/PartialDoctorViewAppDetail.cshtml
@@ -5,7 +5,7 @@
     Layout = null;
 }
 
-@if (Model != null)
+@if (Model != null && Model.appID!=0)
 {
     var patientName = "";
     var age = "N.A";
