--- a/WebApp/Views/DoctorConsultation/PartialViewDoctorConsultationDetail.cshtml
+++ b/WebApp/Views/DoctorConsultation/PartialViewDoctorConsultationDetail.cshtml
@@ -5,7 +5,7 @@
 @{
     Layout = null;
 }
-@if (Model != null && Model.consultID != 0)
+@if (Model != null && Model.consultID != 0)//
 {
     var patienName = "";
     var age = "N.A";
